Updating css for word wrapping syntaxhighlighting Updating issues with syntaxhighlighting and html tags

--- a/indefero/www/media/idf/css/syntaxhighlight/shCore.css
+++ b/indefero/www/media/idf/css/syntaxhighlight/shCore.css
@@ -262,3 +262,7 @@
 /* Strings */
 .syntaxhighlighter .asmstring
 { color: #b0002d; font-weight: normal !important; }
+
+body .syntaxhighlighter .line {
+    white-space: pre-wrap !important; /* make code wrap */
+}
